--- a/app/views/users/_github.html.erb
+++ b/app/views/users/_github.html.erb
@@ -9,13 +9,31 @@
   <h3>Followers:</h3>
   <ul>
     <% @github_facade.followers.each do |follower| %>
-      <li class="follower"><%= link_to(follower.name, follower.url) %></li>
+      <li class="follower" id="follower-<%= follower.uid %>">
+        <%= link_to(follower.name, follower.url) %>
+        <% if follower.on_our_site? %>
+          <% if follower.friends_with?(current_user) %>
+            Is your friend
+          <% else %>
+            <%= link_to("Add Friend", friendships_path(current_user, follower.id), method: :post) %>
+          <% end %>
+        <% end %>
+      </li>
     <% end %>
   </ul>
   <h3>Following:</h3>
   <ul>
     <% @github_facade.followings.each do |following| %>
-      <li class="following"><%= link_to(following.name, following.url) %></li>
+    <li class="following" id="following-<%= following.uid %>">
+      <%= link_to(following.name, following.url) %>
+      <% if following.on_our_site? %>
+        <% if following.friends_with?(current_user) %>
+          Is your friend
+        <% else %>
+          <%= link_to("Add Friend", friendships_path(current_user, following.id), method: :post) %>
+        <% end %>
+      <% end %>
+    </li>
     <% end %>
   </ul>
 </section>
